<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Service_santa_ana">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="83dp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:srcCompat="@drawable/ic_arrow_back"
            android:onClick="btn_back_arrow_service_santa_ana"/>

        <Button
            android:id="@+id/btn_psychology"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="65dp"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/service_santa_ana_btn"
            android:textColor="@color/black"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_services_santa_ana"
            app:strokeColor="@color/black" />

        <TextView
            android:id="@+id/txt_reserve_date"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="130dp"
            android:autoSizeTextType="uniform"
            android:text="@string/txt_date_reserve_services"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_sports"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="155dp"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/select_sport_btn"
            android:textColor="@color/black"
            app:cornerRadius="20dp"
            app:strokeColor="@color/black" />

        <Spinner
            android:id="@+id/spinner_sport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"/>

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="360dp"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/select_hour_btn"
            android:textColor="@color/black"
            app:cornerRadius="20dp"
            app:strokeColor="@color/black" />

       <Spinner
           android:id="@+id/spinner_hour_sport"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="440dp"/>


        <Button
            android:id="@+id/btn_reserve"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginTop="660dp"
            android:layout_marginStart="320dp"
            app:cornerRadius="30dp"
            app:icon="@drawable/ic_send"
            app:strokeColor="@color/black" />

    </FrameLayout>


</RelativeLayout>