<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Log_in">

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:clickable="true"
        android:onClick="btn_back_arrow_log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/txtLogIn"
        android:layout_width="238dp"
        android:layout_height="88dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/title_login"
        android:textColor="@color/black"
        android:textSize="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow_back" />

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogIn"
        app:srcCompat="@drawable/ic_email" />

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogIn"
        app:srcCompat="@drawable/ic_password" />

    <EditText
        android:id="@+id/txt_email_log_in"
        android:layout_width="331dp"
        android:layout_height="39dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="195dp"
        android:background="@drawable/style_border_edittext"
        android:ems="10"
        android:hint="@string/email_example"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toEndOf="@+id/email_icon"
        app:layout_constraintTop_toBottomOf="@+id/txtLogIn" />

    <EditText
        android:id="@+id/txt_password_log_in"
        android:layout_width="331dp"
        android:layout_height="39dp"
        android:layout_marginTop="255dp"
        android:layout_marginStart="55dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_text_color"
        android:background="@drawable/style_border_edittext"
        android:hint="@string/password_example"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toEndOf="@+id/password_icon"
        app:layout_constraintTop_toBottomOf="@+id/txtLogIn" />


    <Button
        android:id="@+id/btn_next_register"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="300dp"
        android:backgroundTint="@color/black"
        android:onClick="btn_next_log_in"
        android:text="@string/next_btn"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:strokeColor="@color/black" />

</RelativeLayout>