<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        android:onClick="btn_back_arrow_register"/>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="238dp"
        android:layout_height="88dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/title_register"
        android:textColor="@color/black"
        android:textSize="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow_back" />

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegister"
        app:srcCompat="@drawable/ic_email" />

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegister"
        app:srcCompat="@drawable/ic_password" />

    <EditText
        android:id="@+id/txt_email_register"
        android:layout_width="331dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/style_border_edittext"
        android:ems="10"
        android:hint="@string/email_example"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toEndOf="@+id/email_icon"
        app:layout_constraintTop_toBottomOf="@+id/txtRegister" />

    <EditText
        android:id="@+id/txt_password_register"
        android:layout_width="331dp"
        android:layout_height="39dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_text_color"
        android:background="@drawable/style_border_edittext"
        android:hint="@string/password_example"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toEndOf="@+id/password_icon"
        app:layout_constraintTop_toBottomOf="@+id/txtRegister" />

    <Button
        android:id="@+id/btn_next_register"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="292dp"
        android:backgroundTint="@color/black"
        android:text="@string/next_btn"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password_register"
        app:layout_constraintVertical_bias="0.107"
        app:strokeColor="@color/black"
        android:onClick="btn_next"/>


</androidx.constraintlayout.widget.ConstraintLayout>